--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "grunt-contrib-swig",
+  "name": "grunt-wobble-swig",
   "version": "0.0.1",
   "description": "Static site compiler built around swig",
   "repository": {
     "type": "git",
-    "url": "https://github.com/luishdez/grunt-contrib-swig.git"
+    "url": "https://github.com/luishdez/grunt-wobble-swig.git"
   },
   "main": "grunt.js",
   "keywords": [
